<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bg_color"
    tools:context=".view.MainActivity">

    <TextView
        android:id="@+id/app_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:textSize="30sp"
        android:textColor="@color/text_color"
        android:fontFamily="sans-serif-smallcaps" />

    <!-- Weather Details Section -->
    <LinearLayout
        android:id="@+id/weatherDetailsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:id="@+id/weatherTopLayout"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/weatherStatus"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:text="@string/fetchstatus"
                android:textAlignment="center"
                android:textColor="@color/text_color"
                android:textSize="22sp"
                android:textStyle="bold" />

            <View
                android:id="@+id/viewbw"
                android:layout_width="20dp"
                android:layout_height="match_parent" />

            <ImageView
                android:id="@+id/weatherImg"
                android:layout_width="45dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical" />
        </LinearLayout>

        <TextView
            android:id="@+id/dateTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textAlignment="center"
            android:layout_marginTop="6dp"
            android:textSize="19sp"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/degree"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fetching"
            android:textAlignment="center"
            android:layout_marginTop="6dp"
            android:textSize="28sp"
            android:textColor="@color/text_color"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/gradient_bg"
            android:layout_margin="12dp">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="16dp"
                    android:layout_weight="0.333"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/windImg"
                        android:layout_width="34dp"
                        android:layout_height="34dp"
                        android:layout_gravity="center"
                        android:src="@drawable/wind" />

                    <TextView
                        android:id="@+id/windDeg"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:textColor="@color/text_color"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/air"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:layout_weight="0.333"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/humidityImg"
                        android:layout_width="34dp"
                        android:layout_height="34dp"
                        android:layout_gravity="center"
                        android:src="@drawable/humidity" />

                    <TextView
                        android:id="@+id/humidity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:textColor="@color/text_color"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/humid"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:layout_weight="0.333"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/rainImg"
                        android:layout_width="34dp"
                        android:layout_height="34dp"
                        android:layout_gravity="center"
                        android:src="@drawable/air" />

                    <TextView
                        android:id="@+id/pressure"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:textColor="@color/text_color"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/pressure"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <!-- News Section -->
    <androidx.appcompat.widget.SearchView
        android:id="@+id/search_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/search_bg"
        android:layout_margin="16dp"
        app:iconifiedByDefault="false" />

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progressbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        app:trackColor="@color/text_color"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/newshead"
        android:textColor="@color/text_color"
        android:textStyle="bold"
        android:paddingLeft="10dp"
        android:paddingBottom="5dp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- News Recyclerview-->
        <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/news_rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:nestedScrollingEnabled="false"/>

        <!-- No data found if no internet no data in ROOM DB-->
        <ImageView
        android:id="@+id/noDataImageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/nodata"
            android:visibility="gone"/>

        <!-- Initially while fetching data from api-->
        <LinearLayout
            android:id="@+id/noResultsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerInParent="true">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="350dp"
                android:src="@drawable/nosearch"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/nosearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/noresult"
                android:textSize="28sp"
                android:textStyle="bold"
                android:textColor="@color/text_color"
                android:layout_gravity="center"
                android:visibility="gone"/>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>
